gcc/testsuite/gdc.test/compilable/ice13819.d
// REQUIRED_ARGS: -O
auto f (double a)
{
    return a % 2 != 0;
}

void main() {}
